<?xml version="1.0"?>
<package format="2">
  <name>kfupm_test_package</name>
  <version>0.0.0</version>
  <description>The test package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="horynjir@todo.todo">horynjir</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mrs_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>mrs_lib</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <!-- <depend>msg_generation</depend> -->
  
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nodelet</exec_depend> 
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
      <!-- <nodelet plugin="${prefix}/plugins.xml" /> -->
      <!--    <nodelet pluginlib="${prefix}/plugins/nodelet_plugins.xml" /> -->
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
